About US Page update

--- a/about.html
+++ b/about.html
@@ -8,13 +8,14 @@
     <meta property="og:url" content="http://127.0.0.1:3000/Blog.html" />
     <meta
       property="og:descripton"
-      content="This is a website for Papa's pizza where the menu is updated everyday"/>
+      content="This is a website for Papa's pizza where the menu is updated everyday"
+    />
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="Papa's Pizza" />
 
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body align ="center">
+  <body align="center">
     <header><img src="logo.jpg" height="150px" width="200px" /></header>
     <nav>
       <ul>
@@ -24,18 +25,21 @@
       </ul>
     </nav>
     <main>
-      <h1>Blog</h1>
-      <article>
-        <h2>20% off this weekend</h2>
-        <p>Come visit in store for free giftcards</p>
-      </article>
-      <article>
-        <h2>Our Menu</h2>
-        <p>Our Menu has been updated with peperoni</p>
-      </article>
+      <h1>About Us</h1>
+      <video width="320" height="240" controls>
+        <source src="video.mp4" type="video/mp4" />
+      </video>
+      <p>
+        Papa's Pizaa is a Pizza resturant not only for papa's but also for
+        mama's, dada's, nana's and kiddos.<br />You can order food or book
+        a table in the resturant for dinner throught this website.
+      </p>
+      <audio loop controls>
+        <source src="audio.mp3" type="audio/mp3" />
+      </audio>
     </main>
     <footer>
-      <p>Copyright by Papa's Pizza  © </p>
+      <p>Copyright by Papa's Pizza ©</p>
     </footer>
   </body>
 </html>
